--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Portfolio</h1>
+<h1>Amy Quach's Portfolio</h1>
+<nav>
+	<a href="https://rosemizuki.github.io/">Home</a>
+	<a href="https://rosemizuki.github.io/about">About</a>
+	<a href="https://rosemizuki.github.io/contact>Contact</a>
+</nav>
 <p>Hi</p>
 </body>
 </html>
