--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <nav>
 	<a href="https://rosemizuki.github.io/">Home</a>
 	<a href="https://rosemizuki.github.io/about">About</a>
-	<a href="https://rosemizuki.github.io/contact>Contact</a>
+	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
 <p>Hi</p>
 </body>
