--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Amy Quach's Portfolio</h1>
+<h1>Welcome to Amy Quach's Personal Website</h1>
 <nav>
 	<a href="https://rosemizuki.github.io/">Home</a>
 	<a href="https://rosemizuki.github.io/about">About</a>
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
-<p>Hi</p>
+<div>
+	<p>Hi there! I see you've found your way to my little website. 
+		My name is Amy. Pleased to make your acquaintance! 
+		I know it isn't much, but feel free to have a look around. 
+		I'm sure you'll find something that'll entertain you for a bit. 
+		Oh. Do mind to not touch anything you aren't suppose to. 
+		We can't have anything blowing up this tiny little website now can we? 
+		Anyway! Enjoy your stay here!
+	</p>
+		
+</div>
 </body>
 </html>
