--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,21 @@
 	<a href="https://rosemizuki.github.io/about">About</a>
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
+<div>
+	<p> Oh hey there again! What was that? 
+		You'd like to leave me a message? 
+		Awesome! You'll find everything you need down below!
+	</p>
+</div>
+	
+<div>
+	<p> Email: amyq1@uci.edu</p>
+	<p> Please be mindful when leaving me a message. 
+		I do appreciate it if you'd only send one if you really want to ask about something. 
+		I don't want to have to feed you to my little friend the Scylla, you know.
+		Other than that...mmm...was there something else to add? No...Well alrighty then! 
+		I look forward to your messages!
+	</p>
+</div>
 </body>
 </html>
