--- a/about.html
+++ b/about.html
@@ -7,5 +7,7 @@
 	<a href="https://rosemizuki.github.io/about">About</a>
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
+<img src="https://scontent-dft4-1.xx.fbcdn.net/v/t1.0-9/10653855_10205145300090788_6200730256290839148_n.jpg?oh=82e8c7ae4ac0d9ef9dcd7300989b36c9&oe=589D43CF">
+
 </body>
 </html>
