--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="stylesheet1.css">
+</head>
 <body>
 <h1>Welcome to Amy Quach's Personal Website</h1>
 <nav>
