--- a/about.html
+++ b/about.html
@@ -8,6 +8,26 @@
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
 <img src="https://scontent-dft4-1.xx.fbcdn.net/v/t1.0-9/10653855_10205145300090788_6200730256290839148_n.jpg?oh=82e8c7ae4ac0d9ef9dcd7300989b36c9&oe=589D43CF">
-
+<div>
+	<p>You'd like to know about me? Alright. I guess I can tell you a little bit about myself. 
+		My name is Amy Quach. I'm a fourth year student at Univeristy of California, Irvine.</p>
+	<h4>What's my major? Oh hush. I was just getting to that part.<br></h4>
+	<p>My major is Business Information Management. I also happen to have an Accounting minor. 
+		Interesting combination isn't it?</p>
+	<h4>What does my major even do? Hmm...I guess I can explain it to you.</h4>
+	<p>My major is the brainchild of the school of business and the school of information and computer science. 
+		Now how do those two schools relate? Well all businesses now use some form of technology. 
+		I mean most businesses have a website right? They also use a database to gather information right? 
+		Well my major is a mesh between the business side of a business and the technology side of a business. 
+		I learn everything from finance to strategic management on the business side, and I learn to design and write code on the tech side. 
+		Pretty interesting huh?</p>
+	<h4>Hm? What was that? Oh. What do I do outside of school?</h4>
+	<p> Well when I'm not stuck in a classroom or locked in my room doing homework and studying, I do like to read manga and watch anime. 
+		I also like to watch artists on Twitch and Youtube. It's so calming to watch them create art. 
+		I'm thinking of picking it back up actually. I used to draw before I got to college, but college soon got in the way of the hobby. 
+		I really like to play video games too. Recently I've been playing 7th Dragon III and Fantasy Life on my 3DS. 
+		I've been playing Star Wars: The Old Republic too. Sure seems like I got a lot of games going at the same time huh? 
+		I just like the variety since playing one game for too long actually makes me really bored, so I like to switch it up a bit. </p>
+</div>
 </body>
 </html>
