--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="stylesheet1.css">
+	<title>Amy's World</title>
 </head>
 <body>
 <h1>Welcome to Amy Quach's Personal Website</h1>
