--- a/about.html
+++ b/about.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="stylesheet1.css">
+	<title>About Amy</title>
+</head>
 <body>
 <h1>About Me</h1>
 <nav>
