--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="stylesheet1.css">
+	<title>Contact</title>
+</head>
 <body>
 <h1>Contact</h1>
 <nav>
