--- a/about.html
+++ b/about.html
@@ -31,7 +31,17 @@
 		I'm thinking of picking it back up actually. I used to draw before I got to college, but college soon got in the way of the hobby. 
 		I really like to play video games too. Recently I've been playing 7th Dragon III and Fantasy Life on my 3DS. 
 		I've been playing Star Wars: The Old Republic too. Sure seems like I got a lot of games going at the same time huh? 
-		I just like the variety since playing one game for too long actually makes me really bored, so I like to switch it up a bit. </p>
+		I just like the variety since playing one game for too long actually makes me really bored, so I like to switch it up a bit.</p>
+	<h4> What~? All that isn't enough? What else do you want me to tell you?...You want me to tell you about my childhood?!...Isn't that a little too personal? *sigh* Alright alright.</h4>
+	<p> I grew up in the Los Angeles Area. Lived there my entire life. Mm...I guess I was an active child. I would run after school with a team. 
+		I even competed in races, but I wasn't too serious about them until I got older. 
+		Biggest accomplishment is definitely finishing the Los Angeles Marathon when I was of the young age of 12. 
+		Man how I wish I could still run like that. I mean it wasn't easy, but I ran 26.2 miles! 
+		Think about it! That's basically running over halfway down to Irvine from Los Angeles.</p>
+	<p>Mmm...I think that's all I'll tell you about myself really. 
+		Don't give me that look or I'll kick you back out to that sticky web out there. 
+		I'll have it that you better be glad that you got yourself out of there and found my little site. 
+		Who knows what those monsters out there could of done to you.</p>
 </div>
 </body>
 </html>
