--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>About Me</h1>
-<nav>
+<nav class="nav-bar">
 	<a href="https://rosemizuki.github.io/">Home</a>
 	<a href="https://rosemizuki.github.io/about">About</a>
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
