--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <body>
 <h1>Welcome to Amy Quach's Personal Website</h1>
 <nav class="nav-bar">
-	<a href="https://rosemizuki.github.io/">Home</a>
-	<a href="https://rosemizuki.github.io/about">About</a>
-	<a href="https://rosemizuki.github.io/contact">Contact</a>
+	<ul>
+		<li>
+			<a href="https://rosemizuki.github.io/">Home</a></li>
+		<li>
+			<a href="https://rosemizuki.github.io/about">About</a></li>
+		<li>
+			<a href="https://rosemizuki.github.io/contact">Contact</a></li>
+	</ul>
 </nav>
 <div>
 	<p>Hi there! I see you've found your way to my little website. 
