--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="stylesheet1.css">
+	<link rel="stylesheet" href="css/stylesheet1.css">
 	<title>Amy's World</title>
 </head>
 <body>
