--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="stylesheet1.css">
+	<link rel="stylesheet" href="css/stylesheet1.css">
 	<title>About Amy</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 	<a href="https://rosemizuki.github.io/about">About</a>
 	<a href="https://rosemizuki.github.io/contact">Contact</a>
 </nav>
-<img src="https://scontent-dft4-1.xx.fbcdn.net/v/t1.0-9/10653855_10205145300090788_6200730256290839148_n.jpg?oh=82e8c7ae4ac0d9ef9dcd7300989b36c9&oe=589D43CF" align = "left">
+<img src="img/image.jpeg" align = "left">
 <div>
 	<p>You'd like to know about me? Alright. I guess I can tell you a little bit about myself. 
 		My name is Amy Quach. I'm a fourth year student at Univeristy of California, Irvine.</p>
