--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,14 @@
 	<title>Contact</title>
 </head>
 <body>
+<ul>
+	<li>
+		<a href="https://rosemizuki.github.io/">Home</a></li>
+	<li>
+		<a href="https://rosemizuki.github.io/about">About</a></li>
+	<li>
+		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
+</ul>
 <h1>Contact</h1>
 <nav class="nav-bar">
 	<a href="https://rosemizuki.github.io/">Home</a>
