--- a/about.html
+++ b/about.html
@@ -6,12 +6,15 @@
 	<title>About Amy</title>
 </head>
 <body>
+<ul>
+	<li>
+		<a href="https://rosemizuki.github.io/">Home</a></li>
+	<li>
+		<a href="https://rosemizuki.github.io/about">About</a></li>
+	<li>
+		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
+</ul>
 <h1>About Me</h1>
-<nav class="nav-bar">
-	<a href="https://rosemizuki.github.io/">Home</a>
-	<a href="https://rosemizuki.github.io/about">About</a>
-	<a href="https://rosemizuki.github.io/contact">Contact</a>
-</nav>
 <img src="img/image.jpeg" align = "left">
 <div>
 	<p>You'd like to know about me? Alright. I guess I can tell you a little bit about myself. 
