--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
 </ul>
 <h1>About Me</h1>
-<img src="img/image.jpeg" align = "left">
+<img src="img/image.jpg" align = "left">
 <div>
 	<p>You'd like to know about me? Alright. I guess I can tell you a little bit about myself. 
 		My name is Amy Quach. I'm a fourth year student at Univeristy of California, Irvine.</p>
