--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Amy Quach">
 	<link rel="stylesheet" href="css/stylesheet1.css">
 	<title>Amy's World</title>
 </head>
