--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
 		Other than that...mmm...was there something else to add? No...Well alrighty then! 
 		I look forward to your messages!
 	</p>
+	<p> If you'd like to get a relatively fast response, please email me between 11am and 9pm PST. 
+		Have no idea what time it is where I am? Fear not I've put a clock down below for you.</p>
+	<script src="js/time.js"></script>
 </div>
 </body>
 </html>
