--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Amy Quach">
+	<script src="js/time.js"></script>
 	<link rel="stylesheet" href="css/stylesheet1.css">
 	<title>Contact</title>
 </head>
@@ -34,7 +35,7 @@
 	</p>
 	<p> If you'd like to get a relatively fast response, please email me between 11am and 9pm PST. 
 		Have no idea what time it is where I am? Fear not I've put a clock down below for you.</p>
-	<script src="js/time.js"></script>
+	<p id= "txt"></p>
 </div>
 </body>
 </html>
