--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/stylesheet1.css">
 	<title>Contact</title>
 </head>
-<body>
+<body onload= "startTime()">
 <ul>
 	<li>
 		<a href="https://rosemizuki.github.io/">Home</a></li>
