--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     		var s = today.getSeconds();
    		m = checkTime(m);
 		s = checkTime(s);
-	     	document.getElementById('txt').innerHTML =
+	     	document.getElementById('time').innerHTML =
 		h + ":" + m + ":" + s;
 		var t = setInterval(startTime, 500);
 		}
