--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 		}*/
 		function startTime() {
 		var today = new Date();
-		if ( (today.getMonth() >= 10 && today.getDate() >=6) || (today.getMonth() <= 3 && today.getDate() <= 13){
+		if ( (today.getMonth() >= 10 && today.getDate() >=6) || (today.getMonth() <= 3 && today.getDate() <= 13)){
 			var time = calcTime('-8');
 		}
 		else{
