--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 		I look forward to your messages!
 	</p>
 	<p> If you'd like to get a relatively fast response, please email me between 11am and 9pm PST. 
-		Have no idea what time it is where I am? Fear not I've put a clock down below for you. 
+		Have no idea what time it is where I am? Fear not! I've put a clock down below for you. 
 		If you don't see the clock below click <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=Pacific+Standard+Time" target="_blank">here!</a></p>
 	<p id='time'></p>
 	<!-- start of JavaScript to display local time-->
