--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		We can't have anything blowing up this tiny little website now can we? 
 		Anyway! Enjoy your stay here!
 	</p>
+	<p>Oh here's a picture for you to enjoy. This was from when I went to Cambodia.</p>
+	<img src='img/cambodia.jpg'>
 		
 </div>
 </body>
