--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		Anyway! Enjoy your stay here!
 	</p>
 	<p>Oh here's a picture for you to enjoy. This was from when I went to Cambodia.</p>
-	<img src='img/cambodia.jpg'>
+	<img src='img/cambodia.jpg' align='bottom'>
 		
 </div>
 </body>
