--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Amy Quach">
 	<link rel="stylesheet" href="css/stylesheet1.css">
