--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<a href="https://rosemizuki.github.io/about">About</a></li>
 	<li>
 		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
+	<li>
+    		<a href="https://rosemizuki.github.io/final-project">Final Project</a><li>
 </ul>
 <div>
 	<h1>Welcome to Amy Quach's Personal Website</h1>
