--- a/final-project.html
+++ b/final-project.html
@@ -17,8 +17,8 @@
 		<a href="https://rosemizuki.github.io/about">About</a></li>
 	<li>
 		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
-  <li>
-    <a href="https://rosemizuki.github.io/final-project">Final Project</a><li>
+  	<li>
+    		<a href="https://rosemizuki.github.io/final-project">Final Project</a></li>
 </ul>
 <div align = "center">
   <h1>User Research</h1>
