--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	<li>
 		<a href="https://rosemizuki.github.io/contact">Contact</a></li>
 	<li>
-    		<a href="https://rosemizuki.github.io/final-project">Final Project</a><li>
+    		<a href="https://rosemizuki.github.io/final-project">Final Project</a></li>
 </ul>
 <div>
 	<h1>Contact</h1>
