--- a/final-project.html
+++ b/final-project.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Amy Quach">
 	<link rel="stylesheet" href="css/stylesheet2.css">
-	<title>Amy's World</title>
+	<title>Final Project</title>
 </head>
 <body>
 <ul>
