--- a/final-project.html
+++ b/final-project.html
@@ -23,16 +23,16 @@
 <div align = "center">
   <h1>User Research</h1>
   <hr>
-  <img src="img/User Interviews.PNG" align = "left">
+  <img src="img/User Interviews.PNG" >
   <h3> User Interviews</h3>
   <p></p>
-  <img src="img/Competitor Analysis.PNG" align = "left">
+  <img src="img/Competitor Analysis.PNG" >
   <h3> Competitor Analysis</h3>
   <p></p>
-  <img src="img/Feature Value Matrix.PNG" align = "left">
+  <img src="img/Feature Value Matrix.PNG" >
   <h3> Feature Value Matrix</h3>
   <p></p>
-  <img src="img/Feature Prioritization.PNG" align = "left">
+  <img src="img/Feature Prioritization.PNG" >
   <h3> Feature Prioritization</h3>
   <p></p>
 </div>
