--- a/final-project.html
+++ b/final-project.html
@@ -23,30 +23,30 @@
 <div align = "center">
   <h1>User Research</h1>
   <hr>
+  <h2> User Interviews</h2>
   <img src="img/User Interviews.PNG" >
-  <h3> User Interviews</h3>
   <p></p>
+  <h2> Competitor Analysis</h2>
   <img src="img/Competitor Analysis.PNG" >
-  <h3> Competitor Analysis</h3>
   <p></p>
+  <h2> Feature Value Matrix</h2>
   <img src="img/Feature Value Matrix.PNG" >
-  <h3> Feature Value Matrix</h3>
   <p></p>
+  <h2> Feature Prioritization</h2>
   <img src="img/Feature Prioritization.PNG" >
-  <h3> Feature Prioritization</h3>
   <p></p>
 </div>
 <div align = "center">
   <h1>User Testing</h1>
   <hr>
-  <img src="img/User Stories.PNG" align = "left">
-  <h3>User Stories</h3>
+  <h2>User Stories</h2>
+  <img src="img/User Stories.PNG">
   <p></p>
-  <img src="img/Cognitive Walkthrough.PNG" align = "left">
-  <h3>Cognitive Walkthrough</h3>
+  <h2>Cognitive Walkthrough</h2>
+  <img src="img/Cognitive Walkthrough.PNG">
   <p></p>
-  <img src="img/User Test.PNG" align = "left">
-  <h3>User Test</h3>
+  <h2>User Test</h2>
+  <img src="img/User Test.PNG">
   <p></p>
 </div>
 </body>
