--- a/final-project.html
+++ b/final-project.html
@@ -23,31 +23,49 @@
 <div align = "center">
   <h1>User Research</h1>
   <hr>
-  <h2> User Interviews</h2>
+  <h2> <a href="https://docs.google.com/spreadsheets/d/1kkZORRR_f6Qq4ghET_IoRf3cQnSd1C2AU7Rc0I5jT4c/edit?usp=sharing">User Interviews</a></h2>
   <img src="img/User Interviews.PNG" >
-  <p></p>
-  <h2> Competitor Analysis</h2>
+  <p>User interviews were conducted to find out what users would expect when seeing a portfolio site as well as why
+	they would create or use a portfolio website.</p>
+  <h2> <a href="https://docs.google.com/spreadsheets/d/110LE2jz-ouUX5KgUlvbYZAa74ZkFLtjH8tzIw0aSXoc/edit?usp=sharing">Competitor Analysis</a></h2>
   <img src="img/Competitor Analysis.PNG" >
-  <p></p>
-  <h2> Feature Value Matrix</h2>
+  <p>A competitor analysis is looking at and analysing another website that has a similar purpose to your own. This is
+	to see what others are doing that is effective or not effective so that improvements can be made.
+	  In this case, I analyzed fellow student websites.</p>
+  <h2><a href="https://docs.google.com/spreadsheets/d/1DZwG-4VcHGemob-tl9sxjKdY-gvCtf_GMcUs2meIxYc/edit?usp=sharing">Feature Value Matrix</a></h2>
   <img src="img/Feature Value Matrix.PNG" >
-  <p></p>
-  <h2> Feature Prioritization</h2>
+  <p>A feature value matrix is matrix that lists the features included in a website, like resume or email address, and rates how 
+	important these are to the user, to the business, and how much development effort is needed to implement the feature. 
+	The features I have in this matrix are those that are on my website already and those that I feel would be nice to 
+	add on after the basic website is running.</p>
+  <h2><a href="https://docs.google.com/presentation/d/13bboFRWj0JtgKMXy99hJAZ0D6YDWW9Cyk9iNjugO7IY/edit?usp=sharing">Feature Prioritization</a></h2>
   <img src="img/Feature Prioritization.PNG" >
-  <p></p>
+  <p>I prioritized my features by what would be the basic things needed in a working website. Anything after what is basically needed 
+	such as an about page with a short bio and a form of contact, it can be added later on as it isn't needed in the 
+	minimal viable product.</p>
 </div>
 <div align = "center">
   <h1>User Testing</h1>
   <hr>
-  <h2>User Stories</h2>
+  <h2><a href="https://docs.google.com/spreadsheets/d/19Shkd-PYS_J7aiuVWJ4bb-OWQjf1z8Xp35tlVAgB4aw/edit?usp=sharing">User Stories</a></h2>
   <img src="img/User Stories.PNG">
-  <p></p>
-  <h2>Cognitive Walkthrough</h2>
+  <p>User stories are important as they tell you what a specific type of user would do to look for on the website and why 
+	they would look on the website in the first place. It also tells you what kind of event should happen for the user 
+	to deem that they were successful in their search.</p>
+  <h2><a href="https://docs.google.com/spreadsheets/d/140jg7gq-UF2GrKWL9BluvD_aW5Fob5Wqmn3tTE3Ti2k/edit#gid=0">Cognitive Walkthrough</a></h2>
   <img src="img/Cognitive Walkthrough.PNG">
-  <p></p>
+  <p>A cognitive walkthrough is having users perform certain tasks on the website while asking them questions along the way. 
+	This is to find any design flaws that could possibly hinder a user's experience when using the website. I particularly 
+	had a simple website so the cognitive walkthroughs didn't give me too much information.</p>
   <h2>User Test</h2>
   <img src="img/User Test.PNG">
-  <p></p>
+  <p>The two tests I used were a questions test and a 5 second test. These were chosen as they are more qualitative tests and 
+	can provide insight on how my website is laid out and if it is effective for users. I found that in the 5 second test 
+	a lot of users thought that this website was a travel website instead of a professional website due to the content of 
+	the screenshot they saw. In the question test, I found that how I laid out my About page was not easy for users to 
+	read the content on the page due to spacing.</p>
+  <a href="https://usabilityhub.com/tests/aaeb2b72cac0/results/206de187fbc8">5 Second Test Results</a>
+  <a href="https://usabilityhub.com/tests/d36f792430e6/results/ef92d5137107">Questions Test Results</a>
 </div>
 </body>
 </html>	
