--- a/final-project.html
+++ b/final-project.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/stylesheet2.css">
 	<title>Final Project</title>
 </head>
-<body>
+<body align="center">
 <ul>
 	<li>
 		<a href="https://rosemizuki.github.io/">Home</a></li>
@@ -67,5 +67,28 @@
   <a href="https://usabilityhub.com/tests/aaeb2b72cac0/results/206de187fbc8">5 Second Test Results</a>
   <a href="https://usabilityhub.com/tests/d36f792430e6/results/ef92d5137107">Questions Test Results</a>
 </div>
+<div>
+  <h1>Summary of Findings</h1>
+  <hr>
+  <p>Overall, I feel that I received the most information when I did my user testing phase for my website. During the user research phase, 
+	I found that a lot of the users that I asked to participate, both professionals and students, answered in the same way. 
+	The answers were for a very basic website that had a bio page, contact page, and some projects or skills, which didn't 
+	provide me with much insight on how I can change my website since it was already very basic in layout.</p>
+  <p>During my user testing, it became more clear in what I could do to improve my website. Users were getting their hands on my website 
+	  and had the ability to use the website. Many expressed that on a first impression they thought the website was something 
+	  about travel or was a blog. This indicated to me that I would need to make an adjustment to the content of the pages 
+	  and the presentation of the content to make it seem more like a professional website. Others pointed out that the spacing 
+	  on the About page between the image and the written content could be bigger so that it was easier to read.</p>
+</div>
+<div>
+  <h1>Incorporation of Findings</h1>
+  <hr>
+  <p>I think the biggest thing to change on the website right now is the content. I feel that this will need some more iterations 
+	  as I would need to go back and test with users again to see if the content is more fitting for what I want to portray 
+	  my website as.</p>
+  <p> Another feature that might take me some time would to make my email address a mailto link and find a way to filter what comes in so that 
+	  I don't get sent a lot of spam messages.</p>
+  <p>For quick minor changes, I can adjust the spacing of my content as well as test with other color combinations so that my website 
+	  isn't so harsh on users' eyes.</p>
 </body>
 </html>	
