--- a/final-project.html
+++ b/final-project.html
@@ -90,5 +90,6 @@
 	  I don't get sent a lot of spam messages.</p>
   <p>For quick minor changes, I can adjust the spacing of my content as well as test with other color combinations so that my website 
 	  isn't so harsh on users' eyes.</p>
+</div>
 </body>
 </html>	
